Closed Bug 489734 Opened 16 years ago Closed 16 years ago

Some css3 cursors don't display

Categories

(Core :: Widget: Cocoa, defect)

All
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.3a1

People

(Reporter: phiw2, Assigned: lordpixel)

References

Details

Attachments

(2 files, 1 obsolete file)

Attached file test case
Following bug 464315 the following 5 css3 cursors don't display anymore alias | context-menu | copy | not-allowed | no-drop http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=361a930d2c4b&tochange=04a8a61b9999 --- https://bug487942.bugzilla.mozilla.org/attachment.cgi?id=373951 is a test case for all cursors
Assignee: nobody → lordpixel
This patch adds back the missing cursors, but it will only work on Snow Leopard. It has been implemented using respondsToSelector:/performSelector: so as to be harmless with earlier SDK and releases. Clearly support for 10.4 and 10.5 would be desirable, but requires suitable images. Please let me know if there are automated tests covering this module and how to find them, and I'll be happy to update.
Attachment #416685 - Flags: review?(joshmoz)
Comment on attachment 416685 [details] [diff] [review] Patch to enable missing cursors on Snow Leopard + SEL cursor; Please rename this to cursorMethod or cursorSelector. Thanks!
Attachment #416685 - Flags: review?(joshmoz) → review+
Attachment #416685 - Attachment is obsolete: true
Attachment #416861 - Flags: review?(joshmoz)
Attachment #416861 - Flags: review?(joshmoz) → review+
Attachment #416861 - Flags: superreview?(roc)
Comment on attachment 416861 [details] [diff] [review] Patch with variable name change requested by Josh You don't need superreview on patches that don't change APIs. This is ready for checkin.
Attachment #416861 - Flags: superreview?(roc)
Thanks, it has been years since I made a patch. I guess the rules changed. I actually have commit access (assuming it wasn't revoked at some point) and so once I have time to watch Tinderbox I will check it in.
Oops, I missed your comment and checked it in for you. http://hg.mozilla.org/mozilla-central/rev/d379a17cbf8f
Status: NEW → RESOLVED
Closed: 16 years ago
Keywords: checkin-needed
Hardware: x86 → All
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a1
Is it worth taking this on 1.9.2?
(In reply to comment #2) > Clearly support for 10.4 and 10.5 would be desirable, but requires suitable > images. Is there going to be another bug for fallback code+images so that something shows for these cursors on 10.5 (and 10.4, if it goes in on 1.9.2)?
I would be more than happy to code that, but someone will need to draw the cursors. I suppose simple flat black and white substitutes is within what I could do, but to match the quality of Apple's images in beyond me. If we have access to an artist it would be really nice to upgrade the little black and white spinning progress cursor to resemble the one used by Safari when JavaScript takes too long. (http://www.flickr.com/photos/raza/2721851036/) There's an actual spinning version of the same cursor used by Java on OS X, the shiny blue ball actually rotates like ours does. So this is the "official" application wait cursor for OS X (as opposed to the multi colored system wait cursor, the pizza of death :) ) But this is all predicated on someone making some nice images.
(In reply to comment #10) > If we have access to an artist it would be really nice to upgrade the little > black and white spinning progress cursor to resemble the one used by Safari > when JavaScript takes too long. (http://www.flickr.com/photos/raza/2721851036/) > There's an actual spinning version of the same cursor used by Java on OS X, the > shiny blue ball actually rotates like ours does. So this is the "official" > application wait cursor for OS X (as opposed to the multi colored system wait > cursor, the pizza of death :) ) There is an open bug for that one: bug 411273 (In reply to comment #8) > Is it worth taking this on 1.9.2? If possible, that would be nice.
Flags: wanted1.9.2?
>Is there going to be another bug for fallback code+images so that something >shows for these cursors on 10.5 (and 10.4, if it goes in on 1.9.2)? I'm not sure what we are considering for backwards compatibility, but if we need any artwork, please make sure stephen or myself know
Was there ever a bug filed for making this work on 10.5.8 (pending images…) ? If not, bug 564396 could become the one.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: