Bug 489734 - Implement cursor values "alias", "context-menu", "copy", "not-allowed" and "no-drop" on Mac Os 10.6. r=josh